config/prow/oci/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prow
  annotations:
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
  labels:
    app.kubernetes.io/part-of: prow
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-pods
  annotations:
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
  labels:
    app.kubernetes.io/part-of: prow
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
